feat(frontend): implement measurements, plans and meals ui template
